<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualizer_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <TextView
        android:id="@+id/reader_current_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/visualize_default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Chapter: 1 of 5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/text_reader_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:elevation="32dp"
        app:cardBackgroundColor="?colorSurface"
        app:layout_constraintBottom_toTopOf="@+id/brightness_settings_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_current_chapter">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/text_reader_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Don't set behavior_peekHeight here, has to be set programmatically using the pager's height-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/visualizer_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:behavior_peekHeight="60dp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                tools:visibility="visible">

                <View
                    android:id="@+id/peek_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/visualize_sheet_bar_height"
                    android:background="?colorPrimary"
                    app:layout_constraintTop_toTopOf="@id/guideline_mid_height" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/page_translate_btn"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/translate_description"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:stateListAnimator="@null"
                    app:icon="@drawable/ic_translate_black_24dp"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="?colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/peek_view"
                    app:layout_constraintEnd_toStartOf="@id/arrow_btn"
                    app:layout_constraintTop_toTopOf="@id/peek_view" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/arrow_btn"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:stateListAnimator="@null"
                    app:icon="@drawable/ic_arrow_drop_up_black_24dp"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="?colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/peek_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/peek_view"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle" />

                <TextView
                    android:id="@+id/page_bottom_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="?colorSurface"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/peek_view"
                    tools:text="Real content to display" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_mid_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/page_translation_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/page_bottom_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/peek_view"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/reader_current_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/visualize_default_margin"
        app:layout_goneMarginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/show_toc_btn"
        tools:text="1 / 30" />

    <ImageButton
        android:id="@+id/show_toc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/table_of_contents"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/reader_current_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reader_current_page"
        app:srcCompat="@drawable/ic_list_grey_24dp"
        app:tint="?colorOnSurface"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/brightness_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/brightness_settings"
        app:layout_constraintBottom_toBottomOf="@+id/reader_current_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reader_current_page"
        app:tint="?colorOnSurface"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/visualizer_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_reader_card_view"
        app:layout_constraintEnd_toEndOf="@+id/text_reader_card_view"
        app:layout_constraintStart_toStartOf="@+id/text_reader_card_view"
        app:layout_constraintTop_toTopOf="@+id/text_reader_card_view"
        tools:visibility="visible"/>

    <SeekBar
        android:id="@+id/pages_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/reader_current_page"
        app:layout_constraintEnd_toStartOf="@+id/reader_current_page"
        app:layout_constraintStart_toEndOf="@+id/brightness_settings_btn"
        app:layout_constraintTop_toTopOf="@+id/reader_current_page" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>