...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/beige_bg_btn"
            app:selectionRequired="true"
            app:singleSelection="true"
            tools:checkedButton="@id/single_page_btn">

            <Button
                android:id="@+id/single_page_btn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/single_page"
                app:icon="@drawable/ic_rect" />

            <Button
                android:id="@+id/split_page_btn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/split_page"
                app:icon="@drawable/ic_setting_split" />

...
