<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualize_text">

    <fragment
        android:id="@+id/visualizeFragmentDest"
        android:name="com.guillermonegrete.tts.importtext.visualize.VisualizeTextFragment"
        android:label="Visualizer"
        tools:layout="@layout/fragment_visualize_text" >
    </fragment>

    <fragment
        android:id="@+id/webReaderFragmentDest"
        android:name="com.guillermonegrete.tts.webreader.WebReaderFragment"
        android:label="Reader"
        tools:layout="@layout/fragment_web_reader" >
        <argument
            android:name="link"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/notesListFragment"
        android:name="com.guillermonegrete.tts.common.notes.NotesListFragment"
        android:label="NotesListFragment">
        <argument
            android:name="id"
            app:argType="integer"/>
        <argument
            android:name="type"
            app:argType="com.guillermonegrete.tts.db.NoteType"/>
    </fragment>

    <action android:id="@+id/to_notesListFragment" app:destination="@id/notesListFragment"/>
</navigation>
