...
    <string name="small_label">Small</string>
    <string name="large_label">Large</string>

    <string name="import_text_hint">Enter text to import</string>
    <string name="visualize_label">Visualizer</string>
    <string name="reader_current_page_label">%1$d / %2$d</string>
    <string name="reader_current_chapter_label">Chapter: %1$d of %2$d</string>
    <string name="table_of_contents">Table of contents</string>
    <string name="brightness_settings">Brightness settings</string>
    <string name="recent_files_label">Recently opened files</string>
    <string name="error_translation">Error when translating</string>
    <string name="error">Error</string>
    <string name="split_page_setting">Split page</string>
...
    <string name="search">Search</string>
    <string name="no_file_read_permission">Read storage permission is necessary to load images</string>
    <string name="more_options">More options</string>
    <string name="cover_image">Cover image</string>
    <string name="delete">Delete</string>
    <string name="delete_word_message">Do you want to delete this word?</string>
    <string name="auto_detect">AUTO DETECT</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
...
