<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/text_language_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintBottom_toBottomOf="@+id/pick_language"
        app:layout_constraintStart_toEndOf="@+id/pick_language"
        app:layout_constraintTop_toTopOf="@+id/pick_language"
        tools:text="EN" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        app:icon="@drawable/ic_baseline_arrow_drop_down_24"
        app:iconGravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Auto detect"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tts_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tts_edit_text_hint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/pick_language"
        app:layout_constraintWidth_max="400dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tts_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="2"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/startBubble_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/startBubble_button_name"
        app:layout_constraintEnd_toStartOf="@+id/clipboard_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_btn" />

    <Button
        android:id="@+id/clipboard_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/clipboard_btn_caption"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/startBubble_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startBubble_btn"
        app:layout_constraintTop_toTopOf="@+id/startBubble_btn" />

    <FrameLayout
        android:id="@+id/play_icons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/browse_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tts_text_layout">

        <Button
            android:id="@+id/play_btn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/reproduce_description"
            android:drawableTop="@drawable/ic_volume_up_black_24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/reproduce_description"
            app:drawableTint="?colorOnSurface"
            app:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/play_loading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorOnSurface"
        app:layout_constraintTop_toBottomOf="@+id/paste_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/browse_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/browse_icon_description"
        android:drawableTop="@drawable/ic_public_black_24dp"
        android:text="@string/search"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        app:layout_constraintEnd_toStartOf="@+id/paste_btn"
        app:layout_constraintStart_toEndOf="@+id/play_icons_container"
        app:layout_constraintTop_toBottomOf="@+id/tts_text_layout"
        app:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/paste_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/paste_icon_description"
        android:drawableTop="@drawable/ic_content_paste_black_24dp"
        android:text="@string/paste_icon_description"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        app:layout_constraintBottom_toBottomOf="@+id/browse_btn"
        app:layout_constraintEnd_toStartOf="@id/web_reader_btn"
        app:layout_constraintStart_toEndOf="@+id/browse_btn"
        app:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/web_reader_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/reader_icon_description"
        android:text="@string/reader_icon_description"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_menu_book_24"
        app:iconTint="?colorOnSurface"
        app:iconGravity="top"
        app:layout_constraintBottom_toBottomOf="@+id/browse_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paste_btn"
        app:textAllCaps="false" />
</androidx.constraintlayout.widget.ConstraintLayout>

